# halldyll-agent

./: Cargo.toml  MEMORY_SYSTEM.md  PROJECT_MODELE.md  archi_meme  cargo.md  lunch.md  package-lock.json
.claude/: settings.local.json
desktop/: package-lock.json  package.json  vite.config.ts
desktop/src/: App.css  App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
desktop/src-tauri/src/conversations/: commands.rs  mod.rs  store.rs  types.rs
desktop/src/components/chat/: ChatArea.css  ChatArea.tsx  EmptyState.css  EmptyState.tsx  MessageItem.css  MessageItem.tsx  MessageList.tsx  TypingIndicator.css  TypingIndicator.tsx
desktop/src/components/common/: MarkdownRenderer.css  MarkdownRenderer.tsx
desktop/src/components/composer/: Composer.css  Composer.tsx
desktop/src/components/layout/: Header.css  Header.tsx  Sidebar.css  Sidebar.tsx
desktop/src/context/: AppContext.tsx  types.ts
desktop/src/hooks/: useChat.ts  useConversations.ts  useOllama.ts
desktop/src/services/: tauri.ts
desktop/src/styles/: reset.css  variables.css
scripts/: start-cloud.sh
src/: lib.rs  main.rs  start_halldyll_agent.rs
src/llm/: mod.rs  ollama_starter_ministral.rs
src/memory/: mod.rs
src/memory/adapters/: mod.rs  rig_adapter.rs
src/memory/core/: config.rs  errors.rs  ids.rs  item.rs  kinds.rs  metadata.rs  mod.rs  user_profile.rs
src/memory/embedding/: embedder.rs  mod.rs
src/memory/engine/: core.rs  mod.rs
src/memory/ingest/: dedupe.rs  entity_extractor.rs  extractor_heuristic.rs  extractor_llm.rs  mod.rs  pruning.rs  semantic_dedupe.rs  transcript_event.rs  transcript_store.rs
src/memory/maintenance/: background_cleanup.rs  mod.rs
src/memory/prompt/: mod.rs  prompt_budget.rs  prompt_builder.rs
src/memory/retrieval/: hybrid_search.rs  mod.rs  ranking.rs  search.rs
src/memory/storage/: mod.rs  sqlite_vec_loader.rs  summary_store.rs  user_store.rs  vector_store.rs
src/memory/summarization/: llm_summarizer.rs  mod.rs
src/scraping/: cache.rs  code.rs  config.rs  content.rs  error.rs  images.rs  mod.rs  types.rs  videos.rs
src/scraping/engines/: brave.rs  duckduckgo.rs  google.rs  mod.rs
src/server/: mod.rs  routes.rs  state.rs
static/: index.html  manifest.json  sw.js
static/assets/: index-Bs9VQayB.js  index-Bt8y6uZg.css
web/: index.html  readme_web.md  vite.config.ts
web/public/: manifest.webmanifest
web/src/: App.css  App.tsx
web/src/components/: ChatArea.css  ChatArea.tsx  Logo.css  Logo.tsx  MessageInput.css  MessageInput.tsx  Sidebar.css  Sidebar.tsx
web/src/hooks/: useChat.ts
web/src/modules/: Background.tsx
web/src/styles/: index.css
web/src/types/: index.ts
