[package]
name = "halldyll_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.38", features = ["clock", "serde"] }
dashmap = "5.5.3"
lru = "0.12.4"
regex = "1.11.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "cookies", "gzip", "brotli", "deflate"] }
rig-core = { version = "0.28.0", default-features = false, features = ["reqwest-rustls"] }
rig-sqlite = "0.1.31"
rusqlite = { version = "0.32", features = ["bundled", "load_extension"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlite-vec = "0.1"
sqlx = { version = "0.8", optional = true, default-features = false, features = ["macros", "sqlite", "runtime-tokio-rustls"] }
thiserror = "1.0.63"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-rusqlite = { version = "0.6.0", default-features = false, features = ["bundled"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
ulid = { version = "1", optional = true, features = ["serde"] }
nanoid = { version = "0.4", optional = true }

# Scraping dependencies
scraper = "0.22"
urlencoding = "2.1"
rand = "0.8"
base64 = "0.22"
futures = "0.3"
async-trait = "0.1"

# Server dependencies
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

[[bin]]
name = "halldyll"
path = "src/bin/launcher.rs"

[[bin]]
name = "halldyll-server"
path = "src/bin/server.rs"

[features]
uuid_v7 = ["uuid/v7"]
ulid_ids = ["dep:ulid"]
nanoid_ids = ["dep:nanoid"]
sqlx = ["dep:sqlx"]
