[package]
name = "halldyll_desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "halldyll_desktop_lib"
path = "src/lib.rs"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["sync"] }
tokio-rusqlite = "0.6"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# IMPORTANT: ce path suppose que desktop/ est dans ton projet halldyll_agent/
# desktop/src-tauri/Cargo.toml -> ../.. = racine de halldyll_agent
halldyll_agent = { path = "../.." }

[build-dependencies]
tauri-build = { version = "2", features = [] }
